fixed event date/time render on mobile

--- a/client/stylesheets/createEventPageStyles/createEventFormOverides.css
+++ b/client/stylesheets/createEventPageStyles/createEventFormOverides.css
@@ -26,6 +26,7 @@
 }
 
 #eventDateTime{
+	width: 400px;
 	margin-left: 10px;
 }
 
